--- a/views/signup.html
+++ b/views/signup.html
@@ -6,6 +6,13 @@
   <h2>Registrar usuario</h2>
   <form class="form-horizontal" method="post" action="/usuario" >
     <div class="form-group">
+      <label class="control-label col-sm-2" for="nombre">Nombre:</label>
+      <div class="col-sm-10">
+        <input type="nombre" id="nombre" class="form-control" name="nombre"
+               placeholder="John Doe" required="true" />
+      </div>
+    </div>
+    <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
         <input type="email" id="email" class="form-control" name="email"
