--- a/views/users.html
+++ b/views/users.html
@@ -52,8 +52,7 @@
         {% if pgActual-1 >= 1 %}
         <li class="page-item"><a class="page-link"
                                  href="/user/list?pg={{ pgActual -1 }}&&busqueda={{ busqueda }}">{{ pgActual -1 }}</a></li>
-        {% endif
-        %}
+        {% endif %}
 
         <!-- Actual -->
         <li class="page-item active"><a class="page-link"
