--- a/views/signup.html
+++ b/views/signup.html
@@ -26,6 +26,13 @@
         	placeholder="contraseña" required="true" />
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="repassword">Re-password:</label>
+      <div class="col-sm-10">
+        <input type="password"  id="repassword" class="form-control" name="repassword"
+               placeholder="contraseña" required="true" />
+      </div>
+    </div>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-primary">Registrar</button>
